--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.25)
-project(raylib_starter)
+project(game)
 
 set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(raylib)
 
-add_executable(raylib_starter src/main.cpp)
-target_link_libraries(raylib_starter PUBLIC raylib)
+file(GLOB game_SRC
+     "src/*.hpp"
+     "src/*.cpp"
+)
+
+add_executable(game ${game_SRC})
+target_link_libraries(game PUBLIC raylib)
